crates/oxc_react_compiler/tests/snapshots/destructuring-array-default.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-array-default.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	const [t0] = props.y;
	let t1;
	if ($[0] !== t0) {
		t1 = t0 === undefined ? ["default"] : t0;
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const [x] = t1;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
