crates/oxc_react_compiler/tests/snapshots/destructuring-array-param-default.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-array-param-default.js
---
function Component(t0) {
	const [t1] = t0;
	const a = t1 === undefined ? 2 : t1;
	return a;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
