crates/oxc_react_compiler/tests/snapshots/destructuring-default-past-end-of-array.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructuring-default-past-end-of-array.js
---
function Component(props) {
	const [t0] = props.value;
	const x = t0 === undefined ? 42 : t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: [] }]
};
